--- a/configuracion.yml
+++ b/configuracion.yml
@@ -75,19 +75,21 @@ topology:
     srv-ftp:
       kind: linux
       image: alpine:latest
-      network-mode: bridge
+      network-mode: none
       exec: 
         - ip link set dev eth1 up
         - ip addr add 10.10.20.2/24 dev eth1
+        - ip route add 10.10.20.3 via 10.10.20.1 dev eth1
       startup-config: configs/srv-ftp.cfg.partial
 
     srv-bd1:
       kind: linux
       image: alpine:latest
-      network-mode: bridge
+      network-mode: none
       exec: 
         - ip link set dev eth1 up
         - ip addr add 10.10.10.2/27 dev eth1
+        - ip route add default via 10.10.10.1 dev eth1
       startup-config: configs/srv-bd1.cfg.partial
 
     srv-web:
@@ -111,16 +113,17 @@ topology:
     admin1:
       kind: linux
       image: alpine:latest
-      network-mode: bridge
+      network-mode: none
       exec: 
         - ip link set dev eth1 up
         - ip addr add 10.10.10.3/27 dev eth1
+        - ip route add default via 10.10.10.1 dev eth1
       startup-config: configs/admin1.cfg.partial
 
     lab1:
       kind: linux
       image: alpine:latest
-      network-mode: bridge
+      network-mode: none
       exec: 
         - ip link set dev eth1 up
         - ip addr add 10.10.20.3/24 dev eth1
@@ -129,7 +132,7 @@ topology:
     alumno1:
       kind: linux
       image: alpine:latest
-      network-mode: bridge
+      network-mode: none
       exec: 
         - ip link set dev eth1 up
         - ip addr add 10.10.20.101/24 dev eth1
