--- a/configuracion.yml
+++ b/configuracion.yml
@@ -127,6 +127,7 @@ topology:
       exec: 
         - ip link set dev eth1 up
         - ip addr add 10.10.20.3/24 dev eth1
+        - ip route add default via 10.10.20.1 dev eth1
       startup-config: configs/lab1.cfg.partial
 
     alumno1:
@@ -136,6 +137,7 @@ topology:
       exec: 
         - ip link set dev eth1 up
         - ip addr add 10.10.20.101/24 dev eth1
+        - ip route add default via 10.10.20.1 dev eth1
       startup-config: configs/alumno1.cfg.partial
 
   links:
