reglas de firewall

--- a/fw1/fw1.conf
+++ b/fw1/fw1.conf
@@ -1,74 +1,61 @@
-# ==========================
-# DEFINICIÓN DE DIRECCIONES
-# ==========================
 config firewall address
-    # Dirección del servidor web
     edit "Web_Server"
-        set subnet 10.10.50.2 255.255.255.255
+        set subnet 10.10.50.2 255.255.255.224
     next
 
-    # Dirección del servidor de correo
     edit "Mail_Server"
-        set subnet 10.10.50.3 255.255.255.255
+        set subnet 10.10.50.3 255.255.255.224
     next
 end
 
-
-# ================================
-# POLÍTICAS DE FIREWALL (POLICIES)
-# ================================
 config firewall policy
 
-    # Permite acceso desde FW2 al servidor web (HTTP y HTTPS)
     edit 1
         set name "FW2_to_Web"
-        set srcintf "port1"                 # Conexión entrante desde FW2
-        set dstintf "port2"                 # Conectado al servidor web
-        set srcaddr "all"                   # Desde cualquier origen
-        set dstaddr "Web_Server"            # Solo hacia el servidor web
+        set srcintf "port1"
+        set dstintf "port2"
+        set srcaddr "all"
+        set dstaddr "Web_Server"
         set action accept
         set schedule "always"
-        set service "HTTP" "HTTPS"          # Solo servicios web
+        set service "HTTP" "HTTPS"
         set nat disable
     next
 
-    # Permite acceso desde FW2 al servidor de correo (SMTP, IMAPS, POP3S)
     edit 2
         set name "FW2_to_Mail"
-        set srcintf "port1"                 # Conexión entrante desde FW2
-        set dstintf "port3"                 # Conectado al servidor de correo
+        set srcintf "port1"
+        set dstintf "port3"
         set srcaddr "all"
-        set dstaddr "Mail_Server"           # Solo hacia el servidor de correo
+        set dstaddr "Mail_Server"
         set action accept
         set schedule "always"
-        set service "SMTP" "IMAPS" "POP3S"  # Servicios típicos de correo
+        set service "SMTP" "IMAPS" "POP3S"
         set nat disable
     next
 
-    # Permite salida a Internet desde red interna (usuarios) a través de FW2
     edit 3
         set name "Internal_to_Internet"
-        set srcintf "port4" "port5"         # Conectado a border leafs / red interna
-        set dstintf "port1"                 # Salida hacia FW2
+        set srcintf "port4" "port5"
+        set dstintf "port1"
         set srcaddr "all"
         set dstaddr "all"
         set action accept
         set schedule "always"
-        set service "DNS" "HTTP" "HTTPS"    # Servicios básicos de navegación
-        set nat enable                      # NAT para acceso a Internet
+        set service "DNS" "HTTP" "HTTPS"
+        set nat enable
     next
 
-    # Regla final para denegar todo el tráfico no permitido anteriormente
     edit 100
         set name "Deny_All"
         set srcintf "any"
         set dstintf "any"
         set srcaddr "all"
         set dstaddr "all"
-        set action deny                     # Niega cualquier otro tráfico
+        set action deny
         set schedule "always"
         set service "ALL"
-        set logtraffic all                  # Loguea todos los accesos denegados
+        set logtraffic all
     next
 
 end
